sfdx-source/force-app/main/default/objects/Brief_Item__c/fields/Pricing_Type__c.field-meta.xml
<CustomField>
    <fullName>Pricing_Type__c</fullName>
    <description>LEM-2983: Captures the Pricing Type associated with Brief Item.</description>
    <label>Pricing Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Flat Fee</fullName>
            </value>
            <value>
                <fullName>Cost per Mille (CPM)</fullName>
            </value>
            <value>
                <fullName>Cost per Click (CPC)</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>