sfdx-source/force-app/main/default/objects/Brief_Item__c/fields/Primary_Routing_Assigned__c.field-meta.xml
<CustomField>
    <fullName>Primary_Routing_Assigned__c</fullName>
    <defaultValue>false</defaultValue>
    <description>LEM-3676: Flag for primary routing assignment. If this flag is true then Q-Assign won&apos;t be assigned WorkPlan to Primary Queue.</description>
    <label>Primary Routing Assigned</label>
    <type>Checkbox</type>
</CustomField>