sfdx-source/force-app/main/default/objects/Brief_Item__c/fields/Product__c.field-meta.xml
<CustomField>
    <fullName>Product__c</fullName>
    <description>LEM-2983: Captures the type of campaign product associated with the Brief Item.</description>
    <label>Product</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Order Again</fullName>
            </value>
            <value>
                <fullName>First Order, Percentage Off</fullName>
            </value>
            <value>
                <fullName>Try Me Free</fullName>
            </value>
            <value>
                <fullName>DoorDash Deals</fullName>
            </value>
            <value>
                <fullName>Spend X, Get Y</fullName>
            </value>
            <value>
                <fullName>Buy Item, Get $X or Y% Off</fullName>
            </value>
            <value>
                <fullName>Buy One, Get One</fullName>
            </value>
            <value>
                <fullName>Free Item Over $X</fullName>
            </value>
            <value>
                <fullName>CRM</fullName>
            </value>
            <value>
                <fullName>Sponsored Products</fullName>
            </value>
            <value>
                <fullName>Banners</fullName>
            </value>
            <value>
                <fullName>Sponsored Listings</fullName>
            </value>
            <value>
                <fullName>Custom Marketing Promotion</fullName>
            </value>
            <value>
                <fullName>CnG DoubleDash</fullName>
            </value>
            <value>
                <fullName>CnG Search</fullName>
            </value>
            <value>
                <fullName>CnG Collections</fullName>
            </value>
            <value>
                <fullName>CnG Categories</fullName>
            </value>
            <value>
                <fullName>Sampling</fullName>
            </value>
            <value>
                <fullName>Branded Collections</fullName>
            </value>
            <value>
                <fullName>Sponsored Brands</fullName>
            </value>
            <value>
                <fullName>SKU Level Deals (Buy X in group, get $Y or Z% off)</fullName>
            </value>
            <value>
                <fullName>Sponsorships</fullName>
            </value>
            <value>
                <fullName>DashPass Exclusive Item</fullName>
            </value>
            <value>
                <fullName>Threshold Deals: Buy $X subtotal in group, get Y off</fullName>
            </value>
            <value>
                <fullName>Discounted Item Promo</fullName>
            </value>
            <value>
                <fullName>Store Rewards (DD Loyalty)</fullName>
            </value>
            <value>
                <fullName>Offsite Ad</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>