sfdx-source/force-app/main/default/objects/Brief_Item__c/fields/Push_Notifications_Audience__c.field-meta.xml
<CustomField>
    <fullName>Push_Notifications_Audience__c</fullName>
    <description>LEM-13267 - DPEI Brief Item Generation</description>
    <label>Push Notifications Audience</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Dashpass</fullName>
                <default>true</default>
                <label>Dashpass</label>
            </value>
            <value>
                <fullName>Classic</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>