sfdx-source/force-app/main/default/objects/Brief_Item__c/fields/Push_Notifications_Quantity__c.field-meta.xml
<CustomField>
    <fullName>Push_Notifications_Quantity__c</fullName>
    <description>LEM-15296: DPEI Incentives Fields</description>
    <formula>Quote_Line__r.SBQQ__Quote__r.Push_Notifications_Quantity__c</formula>
    <label>Push Notifications Quantity</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>