sfdx-source/force-app/main/default/objects/Brief_Item__c/fields/Quote_Line__c.field-meta.xml
<CustomField>
    <fullName>Quote_Line__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <description>LEM-2983: Captures the Quote Line Item with which the Brief Item is associated to.</description>
    <label>Quote Line</label>
    <referenceTo>SBQQ__QuoteLine__c</referenceTo>
    <relationshipLabel>Brief Items</relationshipLabel>
    <relationshipName>Brief_Items</relationshipName>
    <type>Lookup</type>
</CustomField>