sfdx-source/force-app/main/default/objects/Brief_Item__c/fields/Quote_Line_Id__c.field-meta.xml
<CustomField>
    <fullName>Quote_Line_Id__c</fullName>
    <description>LEM-4549: It is the 18 character Id of the related Quote Line Item.</description>
    <formula>CASESAFEID(Quote_Line__c)</formula>
    <label>Quote Line Id</label>
    <type>Text</type>
</CustomField>