sfdx-source/force-app/main/default/objects/Brief_Item__c/fields/Redemption_Type__c.field-meta.xml
<CustomField>
    <fullName>Redemption_Type__c</fullName>
    <description>LEM-5421</description>
    <inlineHelpText>Detail whether the promo redemptions are auto-redeem or require a promo code. Recommended approach is auto-redeem for higher redemptions.</inlineHelpText>
    <label>Redemption Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Promo Code</fullName>
            </value>
            <value>
                <fullName>Auto-Redeem</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>