sfdx-source/force-app/main/default/objects/Brief_Item__c/fields/Report_Frequency__c.field-meta.xml
<CustomField>
    <fullName>Report_Frequency__c</fullName>
    <description>LEM-5110: To improve the Brief Item process.</description>
    <label>Report Frequency</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Weekly</fullName>
            </value>
            <value>
                <fullName>Monthly</fullName>
            </value>
            <value>
                <fullName>Once at End of Campaign</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>