sfdx-source/force-app/main/default/objects/Brief_Item__c/fields/Report_Notes__c.field-meta.xml
<CustomField>
    <fullName>Report_Notes__c</fullName>
    <description>LEM-5110: To improve the Brief Item process.</description>
    <label>Report Notes</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>