sfdx-source/force-app/main/default/objects/Brief_Item__c/fields/Report_QA_Status__c.field-meta.xml
<CustomField>
    <fullName>Report_QA_Status__c</fullName>
    <description>LEM-5110: To improve the Brief Item process.</description>
    <label>Report QA Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>None</fullName>
            </value>
            <value>
                <fullName>Review Needed</fullName>
            </value>
            <value>
                <fullName>Review in Progress</fullName>
            </value>
            <value>
                <fullName>Review Complete - Approved</fullName>
            </value>
            <value>
                <fullName>Review Complete - Needs Revision</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>