sfdx-source/force-app/main/default/objects/Brief_Item__c/fields/Report_Shared_with_Advertiser__c.field-meta.xml
<CustomField>
    <fullName>Report_Shared_with_Advertiser__c</fullName>
    <description>LEM-5110: To improve the Brief Item process.</description>
    <label>Report Shared with Advertiser?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>