sfdx-source/force-app/main/default/objects/Brief_Item__c/fields/Requested_Banner_Copy__c.field-meta.xml
<CustomField>
    <fullName>Requested_Banner_Copy__c</fullName>
    <description>LEM-5421</description>
    <inlineHelpText>If applicable, provide the requested banner copy here. Note: Promo campaigns advertise the value offer; awareness campaigns should have requested copy. Follow Creative Best Practices to ensure smooth process.</inlineHelpText>
    <label>Requested Banner Copy</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>