sfdx-source/force-app/main/default/objects/Brief_Item__c/fields/Requested_CRM_Send_Date_s__c.field-meta.xml
<CustomField>
    <fullName>Requested_CRM_Send_Date_s__c</fullName>
    <description>LEM-2983: Captures the dates for CRM Communication.</description>
    <inlineHelpText>Provide the date you wish to have each CRM communication sent.</inlineHelpText>
    <label>Requested CRM Send Date(s)</label>
    <length>255</length>
    <type>Text</type>
</CustomField>