sfdx-source/force-app/main/default/objects/Brief_Item__c/fields/Require_Ad_Images_per_Key_Term__c.field-meta.xml
<CustomField>
    <fullName>Require_Ad_Images_per_Key_Term__c</fullName>
    <description>LEM-2983: Captures if Ad images are required for the Merchant or not.</description>
    <inlineHelpText>If the Mx wants custom ad images per key term, request that here.</inlineHelpText>
    <label>Mx Requested Custom Ad Images per Term</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>