sfdx-source/force-app/main/default/objects/Brief_Item__c/fields/Required_Spend_Threshold__c.field-meta.xml
<CustomField>
    <fullName>Required_Spend_Threshold__c</fullName>
    <description>LEM-13636 - Store Rewards Brief Item</description>
    <label>Required Spend Threshold</label>
    <precision>12</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>