sfdx-source/force-app/main/default/objects/Brief_Item__c/fields/Reviewed_Days__c.field-meta.xml
<CustomField>
    <fullName>Reviewed_Days__c</fullName>
    <description>LEM-3676: Number of Reviewed days on post assignment.</description>
    <formula>LastModifiedDate - Q_assign_Last_Assigned_Date__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Reviewed Days</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>