sfdx-source/force-app/main/default/objects/Brief_Item__c/fields/Reward__c.field-meta.xml
<CustomField>
    <fullName>Reward__c</fullName>
    <description>LEM-13636 - Store Rewards Brief Item</description>
    <label>$ Reward</label>
    <precision>12</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>