sfdx-source/force-app/main/default/objects/Brief_Item__c/fields/Service_Fee_As_Percent_Budget__c.field-meta.xml
<CustomField>
    <fullName>Service_Fee_As_Percent_Budget__c</fullName>
    <description>LEM-17971: Brief Item Fields for Offsite Ad Product</description>
    <inlineHelpText>% of the overall budget DD withholds for itself as a service fee</inlineHelpText>
    <label>Service Fee (as % of budget)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>