sfdx-source/force-app/main/default/objects/Brief_Item__c/fields/Setup_Fee__c.field-meta.xml
<CustomField>
    <fullName>Setup_Fee__c</fullName>
    <description>Created as part of LEM-6483
LEM-9346: APEX - Fixing the Process for In-Campaign Changes</description>
    <formula>Quote_Line__r.Setup_Fee__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>ZSetup Fee</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>