sfdx-source/force-app/main/default/objects/Brief_Item__c/fields/Setup_Fee_Currency__c.field-meta.xml
<CustomField>
    <fullName>Setup_Fee_Currency__c</fullName>
    <description>LEM-9346: APEX - Fixing the Process for In-Campaign Changes</description>
    <label>Setup Fee</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>