sfdx-source/force-app/main/default/objects/Brief_Item__c/fields/Show_Promo_in_Wallet__c.field-meta.xml
<CustomField>
    <fullName>Show_Promo_in_Wallet__c</fullName>
    <description>LEM-5110: To improve the Brief Item process.</description>
    <label>Show Promo in Wallet?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
                <default>true</default>
                <label>Yes</label>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>