sfdx-source/force-app/main/default/objects/Brief_Item__c/fields/Social_Media_Engagement__c.field-meta.xml
<CustomField>
    <fullName>Social_Media_Engagement__c</fullName>
    <description>LEM-15296: DPEI Incentives Fields</description>
    <formula>TEXT(Quote_Line__r.SBQQ__Quote__r.Social_Media_Engagement__c)</formula>
    <label>Social Media Engagement</label>
    <type>Text</type>
</CustomField>