sfdx-source/force-app/main/default/objects/Brief_Item__c/fields/Sponsored_Listing_Terms__c.field-meta.xml
<CustomField>
    <fullName>Sponsored_Listing_Terms__c</fullName>
    <description>LEM-2983: Captures the sponsored listing terms.</description>
    <label>Keywords</label>
    <length>255</length>
    <type>Text</type>
</CustomField>