sfdx-source/force-app/main/default/objects/Brief_Item__c/fields/Sponsorships_Budget__c.field-meta.xml
<CustomField>
    <fullName>Sponsorships_Budget__c</fullName>
    <description>LEM-7342 Sponsorships - Campaign Fulfillment</description>
    <formula>IF( AND(Quote_Line__r.Package__c =&apos;Sponsorships&apos; ,NOT(ISNULL(Quote_Line__r.SBQQ__RequiredBy__c)))
,Quote_Line__r.SBQQ__RequiredBy__r.Budget__c
,null)</formula>
    <label>Sponsorships Budget</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>