sfdx-source/force-app/main/default/objects/Brief_Item__c/fields/Start_Date__c.field-meta.xml
<CustomField>
    <fullName>Start_Date__c</fullName>
    <description>LEM-2983: Captures the Start Date of the Campaign Item.</description>
    <label>Start Date</label>
    <type>Date</type>
</CustomField>