sfdx-source/force-app/main/default/objects/Brief_Item__c/fields/Static_Audience_List__c.field-meta.xml
<CustomField>
    <fullName>Static_Audience_List__c</fullName>
    <description>LEM-2983: Captures the static audience related to the Product.</description>
    <inlineHelpText>If the custom product is DoubleDash, please provide the associated static audience list</inlineHelpText>
    <label>Static Audience List</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>