sfdx-source/force-app/main/default/objects/Brief_Item__c/fields/Status__c.field-meta.xml
<CustomField>
    <fullName>Status__c</fullName>
    <description>LEM-2983: Captures the Status of the Brief Item.</description>
    <label>Status</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Cancelled</fullName>
            </value>
            <value>
                <fullName>Waiting for Inputs</fullName>
                <default>true</default>
                <label>Waiting for Inputs</label>
            </value>
            <value>
                <fullName>Campaign Building</fullName>
            </value>
            <value>
                <fullName>Testing - New Submission</fullName>
            </value>
            <value>
                <fullName>Testing - Contract and Campaign Review</fullName>
            </value>
            <value>
                <fullName>Testing - In-App Review</fullName>
            </value>
            <value>
                <fullName>Testing - Ready for Edits</fullName>
            </value>
            <value>
                <fullName>Testing - Second Review</fullName>
            </value>
            <value>
                <fullName>Testing - Ready to Schedule Live</fullName>
            </value>
            <value>
                <fullName>Pre-Live Audit - New Submission</fullName>
            </value>
            <value>
                <fullName>Pre-Live Audit - Ready for Edits</fullName>
            </value>
            <value>
                <fullName>Scheduled Live</fullName>
            </value>
            <value>
                <fullName>Live QA Completed</fullName>
            </value>
            <value>
                <fullName>Fully Executed</fullName>
            </value>
            <value>
                <fullName>Deactivated</fullName>
            </value>
            <value>
                <fullName>Pre-Live Audit</fullName>
                <isActive>false</isActive>
                <label>Pre-Live Audit</label>
            </value>
            <value>
                <fullName>Testing</fullName>
                <isActive>false</isActive>
                <label>Testing</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>