sfdx-source/force-app/main/default/objects/Brief_Item__c/fields/Store_Page_Banner_Content_ID__c.field-meta.xml
<CustomField>
    <fullName>Store_Page_Banner_Content_ID__c</fullName>
    <description>LEM-5421</description>
    <inlineHelpText>Provide the Sponsored Products content ID here.</inlineHelpText>
    <label>Store Page Banner Content ID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>