sfdx-source/force-app/main/default/objects/Brief_Item__c/fields/Store_Page_Banner_Included_for_Promo__c.field-meta.xml
<CustomField>
    <fullName>Store_Page_Banner_Included_for_Promo__c</fullName>
    <description>LEM-2983: Checked if the Page Banner needs to be stored.</description>
    <inlineHelpText>Detail whether the campaign will have a Store Page banner here. This banner is required for all promos that have banners and/or are public facing.</inlineHelpText>
    <label>Store Page Banner Included for Promo?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>