sfdx-source/force-app/main/default/objects/Brief_Item__c/fields/Storepage_Banner__c.field-meta.xml
<CustomField>
    <fullName>Storepage_Banner__c</fullName>
    <description>LEM-15296: DPEI Incentives Fields</description>
    <formula>TEXT(Quote_Line__r.SBQQ__Quote__r.Storepage_Banner__c)</formula>
    <label>Storepage Banner</label>
    <type>Text</type>
</CustomField>