sfdx-source/force-app/main/default/objects/Brief_Item__c/fields/String_Matching_Terms_Inclusion__c.field-meta.xml
<CustomField>
    <fullName>String_Matching_Terms_Inclusion__c</fullName>
    <description>LEM-2983: Captures the string matching terms to be included.</description>
    <inlineHelpText>Provide the item strings to include here.</inlineHelpText>
    <label>String Matching Terms (Inclusion)</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>