sfdx-source/force-app/main/default/objects/Brief_Item__c/fields/Submission_Errors__c.field-meta.xml
<CustomField>
    <fullName>Submission_Errors__c</fullName>
    <description>LEM-9491</description>
    <inlineHelpText>Describe the error made by Sales in their initial Brief Item submission.</inlineHelpText>
    <label>Submission Errors</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>