sfdx-source/force-app/main/default/objects/Brief_Item__c/fields/T_C_Landing_Page_ID__c.field-meta.xml
<CustomField>
    <fullName>T_C_Landing_Page_ID__c</fullName>
    <description>LEM-5421</description>
    <label>T&amp;Cs Landing Page Content ID</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>