sfdx-source/force-app/main/default/objects/Brief_Item__c/fields/T_Cs__c.field-meta.xml
<CustomField>
    <fullName>T_Cs__c</fullName>
    <description>LEM-5421</description>
    <label>T&amp;Cs (in text format)</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>