sfdx-source/force-app/main/default/objects/Brief_Item__c/fields/T_Cs_Bottom_Sheet_Content_ID__c.field-meta.xml
<CustomField>
    <fullName>T_Cs_Bottom_Sheet_Content_ID__c</fullName>
    <description>LEM-5110: To improve the Brief Item process.</description>
    <label>T&amp;Cs Bottom Sheet Content ID</label>
    <type>TextArea</type>
</CustomField>