sfdx-source/force-app/main/default/objects/Brief_Item__c/fields/Targeting__c.field-meta.xml
<CustomField>
    <fullName>Targeting__c</fullName>
    <description>LEM-11629: Layout Enhancements - Opportunity and Brief Item.</description>
    <label>Targeting</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Targeting</valueSetName>
    </valueSet>
</CustomField>