sfdx-source/force-app/main/default/objects/Brief_Item__c/fields/Term_Specific_Bidding__c.field-meta.xml
<CustomField>
    <fullName>Term_Specific_Bidding__c</fullName>
    <description>LEM-3674: It is used to indicate the term specific bids.</description>
    <inlineHelpText>Indicate term-specific bids here.</inlineHelpText>
    <label>Term-Specific Bidding</label>
    <length>250</length>
    <type>Text</type>
</CustomField>