sfdx-source/force-app/main/default/objects/Brief_Item__c/fields/Tester__c.field-meta.xml
<CustomField>
    <fullName>Tester__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>LEM-3674: It is used to indicate the user who would be testing the campaign item.</description>
    <label>Tester</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Brief_Item_Tester</relationshipName>
    <type>Lookup</type>
</CustomField>