sfdx-source/force-app/main/default/objects/Brief_Item__c/fields/Testing_QA_Fixes_Needed__c.field-meta.xml
<CustomField>
    <fullName>Testing_QA_Fixes_Needed__c</fullName>
    <description>LEM-3674: It stores the fixed that need to be made for quality assurance.</description>
    <inlineHelpText>Describe any corrections made as part of the initial QA process.</inlineHelpText>
    <label>Testing QA Fixes Needed</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>