sfdx-source/force-app/main/default/objects/Brief_Item__c/fields/Unit_Price__c.field-meta.xml
<CustomField>
    <fullName>Unit_Price__c</fullName>
    <description>LEM-2983: Captures the unit price of the product associated with brief item.
LEM-9346: APEX - Fixing the Process for In-Campaign Changes</description>
    <label>Unit Price</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>