sfdx-source/force-app/main/default/objects/Brief_Item__c/fields/Unit_Price_Val__c.field-meta.xml
<CustomField>
    <fullName>Unit_Price_Val__c</fullName>
    <description>LEM-6823
LEM-9346: APEX - Fixing the Process for In-Campaign Changes</description>
    <formula>Quote_Line__r.Unit_Price__c</formula>
    <inlineHelpText>Captures the unit price of the product associated with brief item</inlineHelpText>
    <label>ZUnit Price</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>