sfdx-source/force-app/main/default/objects/Brief_Item__c/fields/UPC_List__c.field-meta.xml
<CustomField>
    <fullName>UPC_List__c</fullName>
    <description>Created as part of LEM-6483. LEM-17471- Updated the label</description>
    <inlineHelpText>Provide a link to a list of all the UPCs included in the campaign</inlineHelpText>
    <label>URPC List</label>
    <type>Url</type>
</CustomField>