sfdx-source/force-app/main/default/objects/Brief_Item__c/fields/UPC_Ranking_Order__c.field-meta.xml
<CustomField>
    <fullName>UPC_Ranking_Order__c</fullName>
    <description>Created as part of LEM-6483. LEM-17471- Updated the label</description>
    <inlineHelpText>Provide a link to the brands/SKUs you wish to be upranked and the desired ranking. Input &apos;N/A&apos; if this is not applicable to your campaign.</inlineHelpText>
    <label>URPC Ranking Order</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>