sfdx-source/force-app/main/default/objects/Brief_Item__c/fields/UPCs__c.field-meta.xml
<CustomField>
    <fullName>UPCs__c</fullName>
    <description>LEM-3674: It is used to indicate the UPCs included in the Brief Item.</description>
    <inlineHelpText>Indicate the UPCs included in the campaign.</inlineHelpText>
    <label>UPCs</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>