sfdx-source/force-app/main/default/objects/Brief_Item__c/validationRules/Restrict_Creation_Without_QuoteLine.validationRule-meta.xml
<ValidationRule>
    <fullName>Restrict_Creation_Without_QuoteLine</fullName>
    <active>true</active>
    <description>LEM-3957: It is used to restrict Brief Item creation without related Quote Line Item.</description>
    <errorConditionFormula>AND(
  NOT($Permission.Bypass_Brief_Item_Validation_Rules),
  ISBLANK(Legacy_ID__c),
  ISBLANK(Quote_Line__c)
)</errorConditionFormula>
    <errorDisplayField>Quote_Line__c</errorDisplayField>
    <errorMessage>Quote Line is a required field. Please select Quote Line to save the record.</errorMessage>
</ValidationRule>