sfdx-source/force-app/main/default/objects/Brief_Item__c/validationRules/Restrict_Status_Update.validationRule-meta.xml
<ValidationRule>
    <fullName>Restrict_Status_Update</fullName>
    <active>true</active>
    <description>LEM-3676: It is used to restrict status updates to S&amp;O users</description>
    <errorConditionFormula>AND(
      NOT($Permission.Bypass_Brief_Item_Validation_Rules),
      NOT($Permission.Strategy_and_Operations),
      ISCHANGED(Status__c),
      TEXT(Status__c) != $Label.Waiting_For_Inputs,
      TEXT(Status__c) != $Label.Campaign_Building,
      IF(
        NOT($Permission.Allow_Brief_Item_Cancellation),
        TRUE,
        IF(
          TEXT(Status__c) != $Label.Cancelled_Brief_Item_Status,
          TRUE,
          FALSE
        )
      )
    )</errorConditionFormula>
    <errorDisplayField>Status__c</errorDisplayField>
    <errorMessage>Sellers can only set the Brief Item to ‘Waiting for Inputs’ or ‘Campaign Building’. Please update the status accordingly.</errorMessage>
</ValidationRule>